<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TourApp!</string>
    <string name="app_name">Tour Mills College</string>
    <string name="button_on_location">On Campus</string>
    <string name="button_off_location">Off Campus</string>
    <string name="button_prev_text">Previous</string>
    <string name="button_next_text">Next</string>
    <string name="welcome">Greetings from Mills! \nPlease choose one:</string>
    <string name="guidedtourwelcome">Guided Tour</string>
    <string name="divisionactivitywelcome">Choose a Department</string>
    <string name="divisionwelcome">This is an individual division page.</string>
    <string name="on_location_start">You are on campus! Yay!</string>
    <string name="off_location_start">You are not on campus.  You should come visit!</string>
    <string name="button_guided_tour">Show Me Around</string>
    <string name="button_virtual_tour">Virtual Tour</string>
    <string name="button_division_list">Learn About Mills</string>
    <string name="button_division_1">Apply</string>
    <string name="button_apply2">Apply</string>
    <string name="empty">Empty</string>
</resources>
