<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tourapp" android:gravity="center_vertical">
<TextView  
    android:id="@+id/onlocationtv"
    android:layout_width="200dip" 
    android:layout_height="40dip" 
    android:background="@color/mills_blue_transparent"
    android:text="@string/welcome"
    android:textColor="#FFFFFF"
    android:textSize="15dip"
    android:layout_marginBottom="5dip"
    android:gravity="right"/>
        <Button android:background="@color/mills_orange_transparent" 
        android:textColor="#FFFFFF" 
        android:layout_width="150dip" 
        android:layout_height="50dip" 
        android:textStyle="bold" 
        android:layout_alignParentRight="true"
        android:id="@+id/button_on_location" 
        android:layout_marginBottom="5dip"
        android:text="@string/button_on_location"
        android:layout_below="@id/onlocationtv"/>
        
        <Button android:background="@color/mills_orange_transparent" 
        android:textColor="#FFFFFF" 
        android:layout_width="150dip" 
        android:layout_height="50dip" 
        android:textStyle="bold" 
        android:id="@+id/button_off_location" 
        android:text="@string/button_off_location"
        android:layout_below="@id/button_on_location"
        android:layout_marginBottom="5dip"
        android:layout_alignParentRight="true"/>
        

</RelativeLayout>
