<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/offlocation" android:gravity="bottom">
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    />

	<Button android:id="@+id/button_virtual_tour"
    	android:text="@string/button_virtual_tour"
    	android:layout_width="150dip"
    	android:layout_height="50dip"
    	android:layout_marginBottom="5dip"
    	android:textColor="#FFFFFF"
    	android:textStyle="bold"
    	android:background="@color/mills_blue_transparent"
    	android:layout_alignParentRight="true"
    	android:gravity="center_vertical"
    	android:paddingLeft="5dip"
    	 />    
    <Button android:id="@+id/button_division_list2"
    	android:text="@string/button_division_list"
    	android:layout_width="150dip"
    	android:layout_height="50dip"
    	android:layout_below="@id/button_virtual_tour"
    	android:layout_marginBottom="5dip"
    	android:textColor="#FFFFFF"
    	android:textStyle="bold"
    	android:background="@color/mills_blue_transparent"
    	android:layout_alignParentRight="true"
    	android:gravity="center_vertical"
    	android:paddingLeft="5dip"    	 />   
    <Button android:id="@+id/button_apply2"
    	android:text="@string/button_apply2"
    	android:layout_width="150dip"
    	android:layout_height="50dip"
    	android:layout_marginBottom="5dip"
    	android:textColor="#FFFFFF"
    	android:textStyle="bold"
    	android:background="@color/mills_blue_transparent"
    	android:layout_alignParentRight="true"
    	android:gravity="center_vertical"
    	android:paddingLeft="5dip"
	   	android:layout_below="@id/button_division_list2"
    	 />     
</RelativeLayout>
